--- a/src/plugin/build.xml
+++ b/src/plugin/build.xml
@@ -79,6 +79,7 @@
      <ant dir="urlfilter-suffix" target="deploy"/>
      <ant dir="urlfilter-validator" target="deploy"/>
      <ant dir="urlfilter-ignoreexempt" target="deploy"/>
+     <ant dir="index-blacklist-whitelist" target="deploy"/>
      <ant dir="parsefilter-naivebayes" target="deploy"/>
      <ant dir="parsefilter-regex" target="deploy"/>
      <ant dir="urlmeta" target="deploy"/>
